# Verinode

./: ADVANCED_SECURITY_FEATURES.md  BACKEND_ISSUES.md  BulkOperations.tsx  COMPLIANCE.md  COMPLIANCE_IMPLEMENTATION.md  ConflictResolver.ts  DATABASE_OPTIMIZATION.md  DECENTRALIZED_STORAGE_README.md  DataCompressor.ts  Dockerfile  EVENT_DRIVEN_ARCHITECTURE_PR.md  EVENT_SOURCING_PR.md  EnterpriseAuthService.ts  FINAL_PR_INSTRUCTIONS.md  FORM_BUILDER_PR.md  FORM_BUILDER_README.md  GAS_OPTIMIZATION_GUIDE.md  GAS_OPTIMIZATION_README.md  GIT_COMMANDS.bat  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_NEW.md  IPFS_IMPLEMENTATION.md  IncrementalSync.ts  MULTISIG_IMPLEMENTATION.md  MultiCloudManager.ts  OAuth2Provider.ts  PRIVACY.md  PR_139_DESCRIPTION.md  PR_ADVANCED_SECURITY.md  PR_CONTENT.md  PR_DESCRIPTION_FINAL.md  PR_DESCRIPTION_RATE_LIMITING.md  PR_DESCRIPTION_SECURITY.md  PR_GAS_OPTIMIZATION_SUITE.md  PR_INSTRUCTIONS.md  PR_VERINODE_INSTRUCTIONS.md  PULL_REQUEST_BACKEND_ISSUES.md  PULL_REQUEST_SUMMARY.md  PUSH_TO_REPOSITORY.md  (+25 more)
ai/: requirements.txt
backend/: CONFIG.md  authService.ts  package-lock.json  package.json  test-monitoring.js  tsconfig.json
cli/: README.md  package.json
config/: ipfsConfig.js  media-storage.yml
contracts/: .env.example  .eslintrc.js  CONFIG.md  GRANT_TREASURY_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  TEMPLATE_BUILDER_IMPLEMENTATION.md  docker-compose.monitoring.yml  package-lock.json  push_to_fork.bat
contracts/tools/: Cargo.toml  advanced_gas_profiler.rs  gas_profiler.rs  optimization_suggestions.rs  security_rules.rs  vulnerability_db.rs
examples/: JavaBasicExample.java  README.md  go_basic_example.go  python_basic_example.py  rust_basic_example.rs
frontend/: .env.production  PWA_IMPLEMENTATION.md  jest.config.js  next.config.js  package-lock.json  package.json  webpack.config.js
mobile/: package.json
monitoring/: ApiAdapter.js  ApiAdapter.test.js  README.md  (+3 more)
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  config.rs  error.rs  lib.rs
sdks/rust/src/services/: mod.rs  proof.rs  verification.rs  wallet.rs
sdks/rust/src/types/: mod.rs
sdks/rust/src/utils/: http.rs  mod.rs  websocket.rs
(+895 files in other folders)
