[package]
name = "gas-optimization-tools"
version = "0.1.0"
edition = "2021"
description = "Gas optimization and profiling tools for Verinode contracts"
authors = ["Verinode Team"]
license = "MIT"

[[bin]]
name = "gas_profiler"
path = "gas_profiler.rs"

[[bin]]
name = "optimization_suggestions"
path = "optimization_suggestions.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
