[package]
name = "verinode-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Verinode Team <team@verinode.com>"]
license = "MIT"
repository = "https://github.com/Great-2025/Verinode"
homepage = "https://github.com/Great-2025/Verinode"
documentation = "https://docs.rs/verinode-sdk"
description = "Official Rust SDK for Verinode - Web3 infrastructure for cryptographic proofs"
keywords = ["verinode", "web3", "blockchain", "cryptographic-proofs", "stellar"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# Async utilities
async-trait = "0.1"

# Stellar SDK (optional)
stellar-sdk = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[features]
default = ["stellar"]
stellar = ["stellar-sdk"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "wallet"
path = "examples/wallet.rs"

[[example]]
name = "subscriptions"
path = "examples/subscriptions.rs"
